// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinButton snapshots renders correctly 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        min-width: 86px;
        outline: none;
        width: 100%;
      }
>
  <div
    className=

        {
          align-items: center;
          display: inline-flex;
          float: left;
          height: 32px;
          margin-right: 10px;
        }
  >
    <label
      className=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 600;
            line-height: 20px;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 5px;
            pointer-events: none;
            word-wrap: break-word;
          }
      htmlFor="input0"
      id="Label1"
    >
      label
    </label>
  </div>
  <div
    className=

        {
          border-color: #605e5c;
          box-sizing: border-box;
          display: flex;
          height: 32px;
          min-width: 86px;
          position: relative;
        }
        &:after {
          border-radius: 2px;
          border-width: 1px;
          border: 2px solid #605e5c;
          bottom: 0px;
          content: '';
          left: 0px;
          pointer-events: none;
          position: absolute;
          right: 0px;
          top: 0px;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:after {
          border-color: GrayText;
        }
        &:hover:after {
          border-color: #323130;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover:after {
          border-color: Highlight;
        }
    data-ktp-target={true}
  >
    <input
      aria-disabled={false}
      aria-labelledby="Label1"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      autoComplete="off"
      className=
          ms-spinButton-input
          {
            background-color: #ffffff;
            border-radius: 2px 0 0 2px;
            border-style: none;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            cursor: text;
            display: block;
            flex: 1;
            font-family: inherit;
            font-size: 14px;
            height: 100%;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            min-width: 61px;
            outline: 0px;
            overflow: hidden;
            padding-bottom: 0;
            padding-left: 9px;
            padding-right: 8px;
            padding-top: 0;
            text-overflow: ellipsis;
            user-select: text;
            white-space: nowrap;
          }
          &::selection {
            background-color: #0078d4;
            color: #ffffff;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&::selection {
            background-color: Highlight;
            border-color: Highlight;
            color: HighlightText;
          }
      data-ktp-execute-target={true}
      data-lpignore={true}
      disabled={false}
      id="input0"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="spinbutton"
      type="text"
      value="0"
    />
    <span
      className=

          {
            cursor: default;
            display: block;
            height: 100%;
          }
    >
      <button
        className=
            ms-Button
            ms-Button--icon
            ms-UpButton
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              background-color: transparent;
              border-radius: 2px;
              border: none;
              box-sizing: border-box;
              color: #605e5c;
              cursor: default;
              display: block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 50%;
              outline: none;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: relative;
              text-align: center;
              text-decoration: none;
              user-select: none;
              width: 23px;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            :host(.ms-Fabric--isFocusVisible) &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            &:active > span {
              left: 0px;
              position: relative;
              top: 0px;
            }
            &.ms-DownButton {
              border-radius: 0 0 2px 0;
            }
            &.ms-UpButton {
              border-radius: 0 2px 0 0;
            }
            &:hover {
              background-color: #f3f2f1;
              color: #323130;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
              border-color: Highlight;
              color: Highlight;
            }
            &:active {
              background-color: #edebe9;
              color: #323130;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:active {
              background-color: Highlight;
              color: HighlightText;
            }
        data-is-focusable={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className=
              ms-Button-flexContainer
              {
                align-items: center;
                display: flex;
                flex-wrap: nowrap;
                height: 100%;
                justify-content: center;
              }
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className=
                ms-Icon
                ms-Button-icon
                {
                  display: inline-block;
                }
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: "FabricMDL2Icons-2";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
                {
                  flex-shrink: 0;
                  font-size: 8px;
                  height: 16px;
                  line-height: 16px;
                  margin-bottom: 0px;
                  margin-left: 0px;
                  margin-right: 0px;
                  margin-top: 0px;
                  text-align: center;
                }
            data-icon-name="ChevronUpSmall"
            style={
              Object {
                "fontFamily": "\\"FabricMDL2Icons-2\\"",
              }
            }
          >
            
          </i>
        </span>
      </button>
      <button
        className=
            ms-Button
            ms-Button--icon
            ms-DownButton
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              background-color: transparent;
              border-radius: 2px;
              border: none;
              box-sizing: border-box;
              color: #605e5c;
              cursor: default;
              display: block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 50%;
              outline: none;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: relative;
              text-align: center;
              text-decoration: none;
              user-select: none;
              width: 23px;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            :host(.ms-Fabric--isFocusVisible) &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            &:active > span {
              left: 0px;
              position: relative;
              top: 0px;
            }
            &.ms-DownButton {
              border-radius: 0 0 2px 0;
            }
            &.ms-UpButton {
              border-radius: 0 2px 0 0;
            }
            &:hover {
              background-color: #f3f2f1;
              color: #323130;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
              border-color: Highlight;
              color: Highlight;
            }
            &:active {
              background-color: #edebe9;
              color: #323130;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:active {
              background-color: Highlight;
              color: HighlightText;
            }
        data-is-focusable={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className=
              ms-Button-flexContainer
              {
                align-items: center;
                display: flex;
                flex-wrap: nowrap;
                height: 100%;
                justify-content: center;
              }
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className=
                ms-Icon
                ms-Button-icon
                {
                  display: inline-block;
                }
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: "FabricMDL2Icons-3";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
                {
                  flex-shrink: 0;
                  font-size: 8px;
                  height: 16px;
                  line-height: 16px;
                  margin-bottom: 0px;
                  margin-left: 0px;
                  margin-right: 0px;
                  margin-top: 0px;
                  text-align: center;
                }
            data-icon-name="ChevronDownSmall"
            style={
              Object {
                "fontFamily": "\\"FabricMDL2Icons-3\\"",
              }
            }
          >
            
          </i>
        </span>
      </button>
    </span>
  </div>
</div>
`;

exports[`SpinButton snapshots renders correctly with user-provided values 1`] = `
<div
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        min-width: 86px;
        outline: none;
        width: 100%;
      }
>
  <div
    className=

        {
          align-items: center;
          display: inline-flex;
          float: left;
          height: 32px;
          margin-right: 10px;
        }
  >
    <label
      className=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 600;
            line-height: 20px;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 5px;
            padding-left: 0;
            padding-right: 0;
            padding-top: 5px;
            pointer-events: none;
            word-wrap: break-word;
          }
      htmlFor="input0"
      id="Label1"
    >
      label
    </label>
  </div>
  <div
    className=

        {
          border-color: #605e5c;
          box-sizing: border-box;
          display: flex;
          height: 32px;
          min-width: 86px;
          position: relative;
        }
        &:after {
          border-radius: 2px;
          border-width: 1px;
          border: 2px solid #605e5c;
          bottom: 0px;
          content: '';
          left: 0px;
          pointer-events: none;
          position: absolute;
          right: 0px;
          top: 0px;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:after {
          border-color: GrayText;
        }
        &:hover:after {
          border-color: #323130;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover:after {
          border-color: Highlight;
        }
    data-ktp-target={true}
    data-test="test"
  >
    <input
      aria-disabled={false}
      aria-labelledby="Label1"
      aria-valuemax={100}
      aria-valuemin={0}
      aria-valuenow={0}
      aria-valuetext="0 pt"
      autoComplete="off"
      className=
          ms-spinButton-input
          {
            background-color: #ffffff;
            border-radius: 2px 0 0 2px;
            border-style: none;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            cursor: text;
            display: block;
            flex: 1;
            font-family: inherit;
            font-size: 14px;
            height: 100%;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            min-width: 61px;
            outline: 0px;
            overflow: hidden;
            padding-bottom: 0;
            padding-left: 9px;
            padding-right: 8px;
            padding-top: 0;
            text-overflow: ellipsis;
            user-select: text;
            white-space: nowrap;
          }
          &::selection {
            background-color: #0078d4;
            color: #ffffff;
          }
          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&::selection {
            background-color: Highlight;
            border-color: Highlight;
            color: HighlightText;
          }
      data-ktp-execute-target={true}
      data-lpignore={true}
      disabled={false}
      id="input0"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="spinbutton"
      type="text"
      value="0"
    />
    <span
      className=

          {
            cursor: default;
            display: block;
            height: 100%;
          }
    >
      <button
        className=
            ms-Button
            ms-Button--icon
            ms-UpButton
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              background-color: transparent;
              border-radius: 2px;
              border: none;
              box-sizing: border-box;
              color: #605e5c;
              cursor: default;
              display: block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 50%;
              outline: none;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: relative;
              text-align: center;
              text-decoration: none;
              user-select: none;
              width: 23px;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            :host(.ms-Fabric--isFocusVisible) &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            &:active > span {
              left: 0px;
              position: relative;
              top: 0px;
            }
            &.ms-DownButton {
              border-radius: 0 0 2px 0;
            }
            &.ms-UpButton {
              border-radius: 0 2px 0 0;
            }
            &:hover {
              background-color: #f3f2f1;
              color: #323130;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
              border-color: Highlight;
              color: Highlight;
            }
            &:active {
              background-color: #edebe9;
              color: #323130;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:active {
              background-color: Highlight;
              color: HighlightText;
            }
        data-is-focusable={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className=
              ms-Button-flexContainer
              {
                align-items: center;
                display: flex;
                flex-wrap: nowrap;
                height: 100%;
                justify-content: center;
              }
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className=
                ms-Icon
                ms-Button-icon
                {
                  display: inline-block;
                }
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: "FabricMDL2Icons-2";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
                {
                  flex-shrink: 0;
                  font-size: 8px;
                  height: 16px;
                  line-height: 16px;
                  margin-bottom: 0px;
                  margin-left: 0px;
                  margin-right: 0px;
                  margin-top: 0px;
                  text-align: center;
                }
            data-icon-name="ChevronUpSmall"
            style={
              Object {
                "fontFamily": "\\"FabricMDL2Icons-2\\"",
              }
            }
          >
            
          </i>
        </span>
      </button>
      <button
        className=
            ms-Button
            ms-Button--icon
            ms-DownButton
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              background-color: transparent;
              border-radius: 2px;
              border: none;
              box-sizing: border-box;
              color: #605e5c;
              cursor: default;
              display: block;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 50%;
              outline: none;
              padding-bottom: 0px;
              padding-left: 0px;
              padding-right: 0px;
              padding-top: 0px;
              position: relative;
              text-align: center;
              text-decoration: none;
              user-select: none;
              width: 23px;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            :host(.ms-Fabric--isFocusVisible) &:focus:after {
              border: 1px solid transparent;
              bottom: 2px;
              content: "";
              left: 2px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 2px;
              top: 2px;
              z-index: 1;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
              bottom: -2px;
              left: -2px;
              outline-color: ButtonText;
              right: -2px;
              top: -2px;
            }
            &:active > span {
              left: 0px;
              position: relative;
              top: 0px;
            }
            &.ms-DownButton {
              border-radius: 0 0 2px 0;
            }
            &.ms-UpButton {
              border-radius: 0 2px 0 0;
            }
            &:hover {
              background-color: #f3f2f1;
              color: #323130;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:hover {
              border-color: Highlight;
              color: Highlight;
            }
            &:active {
              background-color: #edebe9;
              color: #323130;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){&:active {
              background-color: Highlight;
              color: HighlightText;
            }
        data-is-focusable={false}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        tabIndex={-1}
        type="button"
      >
        <span
          className=
              ms-Button-flexContainer
              {
                align-items: center;
                display: flex;
                flex-wrap: nowrap;
                height: 100%;
                justify-content: center;
              }
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className=
                ms-Icon
                ms-Button-icon
                {
                  display: inline-block;
                }
                {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  font-family: "FabricMDL2Icons-3";
                  font-style: normal;
                  font-weight: normal;
                  speak: none;
                }
                {
                  flex-shrink: 0;
                  font-size: 8px;
                  height: 16px;
                  line-height: 16px;
                  margin-bottom: 0px;
                  margin-left: 0px;
                  margin-right: 0px;
                  margin-top: 0px;
                  text-align: center;
                }
            data-icon-name="ChevronDownSmall"
            style={
              Object {
                "fontFamily": "\\"FabricMDL2Icons-3\\"",
              }
            }
          >
            
          </i>
        </span>
      </button>
    </span>
  </div>
</div>
`;
